fix(breadcrumbs): fix flex-flow to wrap and not squash the items

--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -4,6 +4,7 @@
   @include text(body1);
 
   display: flex;
+  flex-flow: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
